10-kubernetes/examples/ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  # Routing rules
  rules:
    # Requests for this host go to internal service
    # Domain must be mapped to entrypoint like:
    # - K8s cluster node
    # - Service provider entrypoint
    - host: dashboard.com
      # http protocol
      http:
        paths:
          # Any paths after the domain like dashboard.com/report1
          - path: /
            pathType: Prefix
            backend:
              # Internal service and its name, port
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
  # Default backend's settings
  defaultBackend:
    service:
      name: kubernetes-dashboard
      port:
        number: 80
